# ogl

./: .clang-format  .gitignore  CMakeLists.txt
assets/shaders/: triangle.frag  triangle.vert
src/: core_types.h  file.inl  math.inl  ogl.c
